--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/main.js",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.18",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mysql2": "^3.6.1"
   },
   "devDependencies": {
@@ -13,6 +15,7 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "start": "nodemon ."
+    "start": "nodemon .",
+    "prepare": "tsc-watch"
   }
 }
